Implement challenge 6
